# truescaler

./: CMakeLists.txt  CONTRIBUTING.md  ChangeLog.txt  README.md  _truescaler_core.pyi  find_scale.py  install.sh  pyproject.toml  truescaler.py
.github/workflows/: ci.yml  release-bundle.yml
cpp/: CMakeLists.txt
cpp/include/: core.hpp
cpp/src/: core.cpp
docs/: cli-find-scale.md  cli-truescaler.md  json-input.md  troubleshooting.md
scripts/: build_offline_bundle.sh
tests/: conftest.py  test_cli_and_helpers.py  test_cli_heic.py  test_heic.py  test_truescaler.py
tests/test-images/: scaled_4x3_8.HEIC
truescaler/: __init__.py
